<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Walmart</string>
    <string name="Categories_inside_scrollview">Categories</string>
    <string name="Brands_inside_scrollview">Brands</string>

    <!--  ProgressBarId  -->
    <item name="progress_bar" type="id" />
    <!-- Profile layout -->
    <string name="your_adress">Your adress</string>
    <string name="Personal_information">Personal information</string>
    <string name="My_adresses">My adresses</string>
    <string name="Orders">Orders</string>
    <string name="Feedback">Feedback</string>
    <string name="FAQ">FAQ</string>
    <string name="Delivery_and_payment_terms">Delivery and payment terms</string>
    <string name="display_language">Display language</string>
    <string name="About_us">About us</string>
    <string name="Registration">Registration</string>
    <string name="login">Login</string>
    <string name="Logout">Logout</string>

    <!-- Display Language -->
    <string name="display_lang_en" translatable="false">Display language</string>
    <string name="display_lang_tk" translatable="false">Görkeziş dili</string>
    <string name="display_lang_ru" translatable="false">Язык отображения</string>

    <!-- Main layout -->
    <string name="new_products">New products</string>
    <string name="see_all">See all</string>

    <string name="promotions_and_sales">Promotions and sales</string>

    <string name="popular_products">Popular products</string>

    <string name="sales">Sales</string>

    <string name="search">Search</string>
    <string name="search_hint_text">What would you like to buy?</string>

    <string name="price_for_piece">price for piece</string>
    <string name="pieces"> pc</string>

    <string name="nav_bar_main_menu">Main</string>
    <string name="nav_bar_categories">Categories</string>
    <string name="nav_bar_Cart">Cart</string>
    <string name="nav_bar_Wishlist">Wishlist</string>
    <string name="nav_bar_planned">Planned</string>

    <!-- Empty Cart layout -->
    <string name="Cart_is_empty">Your cart is empty</string>
    <string name="go_and_add_a_product_to_cart">Luckily, you can go to the store and add a product</string>

    <!-- Empty Wishlist layout -->
    <string name="Wishlist_is_empty">Your wishlist is empty</string>
    <string name="go_and_add_a_product_to_wishlist">But you can go to the store and choose some products</string>

    <!-- Empty Planned list layout -->
    <string name="Planned_list_is_empty">Your list is empty</string>
    <string name="go_and_add_a_product_to_planned_list">Create a list and add to your cart, to make your shopping easier</string>


    <!-- Categories layout -->
    <string name="Confectionery">Confectionery</string>
    <string name="Bread_and_pastries">Bread and pastries</string>
    <string name="Dairy_products">Dairy products</string>
    <string name="Grocery">Grocery</string>
    <string name="Food_products">Food products</string>
    <string name="Meat_and_sausages">Meat and sausages</string>
    <string name="Soft_drinks">Soft drinks</string>
    <string name="Tea_and_coffee">Tea and coffee</string>
    <string name="For_diabetics">For diabetics</string>
    <string name="Frozen_products">Frozen products</string>
    <string name="Fish_and_seafood">Fish and seafood</string>
    <string name="Appliances">Appliances</string>
    <string name="Pan_asian_cuisine">Pan-asian cuisine</string>
    <string name="Household_products">Household products</string>
    <string name="Sweets_and_snacks">Sweets and snacks</string>
    <string name="Kids_toys">Kids toys</string>
    <string name="Baby_food">Baby food</string>


    <!-- Cart layout -->
    <string name="in_stock_text">In stock</string>
    <string name="total_price_text">Total</string>
    <string name="delete_btn_text">Delete</string>
    <string name="clear_all_btn_text">Clear</string>
    <string name="number_of_products_in_cart_text">products</string>
    <string name="check_out_btn_text">Checkout</string>
    <string name="checkout_price_text">Your order </string>

    <!-- Wishlist layout -->
    <string name="add_to_cart">To cart</string>

    <!-- Add to planned dialog layout -->
    <string name="add_to_list">Add to list</string>
    <string name="create_a_list">Create a list</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Create planned layout -->
    <string name="planned_lists">Planned lists</string>
    <string name="add_list_name">Add list name</string>
    <string name="date">Date</string>
    <string name="choose_priority">Choose priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="btn_save_txt">Save</string>

    <!-- ProgressBar TextBox Text -->
    <string name="please_wait">Please Wait</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="myurl" translatable="false">"file:///android_asset/dots.html"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>



