<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_white_solid"
    style="Calendar_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:background="@color/lighter_white_solid">



        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="top"
            android:background="@color/lighter_white_solid">

            <ImageView
                android:id="@+id/create_planned_list_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back_btn_ic"
                android:paddingHorizontal="4dp"
                android:layout_marginStart="20dp"/>

        </androidx.appcompat.widget.Toolbar>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/planned_lists"
            android:textSize="34sp"
            android:textColor="@color/color_Accent"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_semibold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/add_list_name"
            android:textSize="18sp"
            android:textColor="@color/light_gray"
            />

        <EditText
            android:id="@+id/planned_list_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:textColor="#363A43"
            android:textColorHint="#7A8089"
            android:backgroundTintMode="src_atop"
            android:backgroundTint="@color/gray"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="datetime"
            android:textColor="#363A43"
            android:textColorHint="#7A8089"
            android:backgroundTintMode="src_atop"
            android:backgroundTint="@color/gray"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:focusable="false"
            android:drawableEnd="@drawable/planned_list_edittext_ic_calendar">


        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/choose_priority"
            android:textSize="18sp"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/high_importance_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/high_importance_round" />

                <TextView
                    android:id="@+id/high_importance_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/light_gray"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/normal_importance_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/normal_importance_round" />

                <TextView
                    android:id="@+id/normal_importance_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/light_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/low_importance_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/low_importance_round"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/low_importance_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/light_gray"/>

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/create_list_btn_planned_layout"
                android:elevation="4dp"/>

            <TextView
                android:id="@+id/create_planned_list_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/create_a_list"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:elevation="4dp" />


        </FrameLayout>


        <TextView
            android:id="@+id/cancel_create_planned_list_layout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Cancel"
            android:textSize="22sp"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif"/>


    </LinearLayout>


</RelativeLayout>

