<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="440dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_gravity="center"
    tools:context=".view.activities.MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogview_plannedlists_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_btn_holder"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_to_list_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_to_list"
            android:textColor="@color/color_Accent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/planned_lists_in_dialog_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/add_to_list_tv">

            <RelativeLayout
                android:id="@+id/add_to_planned_list_dialogview_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/create_planned_list_dialogview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/planned_lists_in_dialog_scrollview">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:alpha=".6"
                android:src="@drawable/ic_create_planned_list_dialogview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".6"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_vertical"
                android:paddingHorizontal="30dp"
                android:text="@string/create_a_list"
                android:textColor="@color/gray"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/add_btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:id="@+id/create_planned_list_alternate_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingBottom="4dp">

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:background="@drawable/dialog_view_add_bg"
                    android:elevation="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/Add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="@color/color_Accent"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>