<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cart_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CartFragment"
    android:layout_marginBottom="66dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="top"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways">


                <ImageView
                    android:id="@+id/profile_btn_cart"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_profile"
                    android:paddingVertical="18dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/top_bar_layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nav_bar_Cart"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/color_Accent"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/empty_cart_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Cart_is_empty"
                    android:textColor="@color/color_Accent"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/go_and_add_a_product_to_cart"
                    android:textColor="@color/pantone_green"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:paddingHorizontal="30dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="400dp"
                    android:src="@drawable/empty_cart_layout_bg"
                    android:padding="20dp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>



        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/amount_of_products_cart_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/lighter_white_solid"
            android:visibility="gone">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <TextView
                        android:id="@+id/number_of_products_in_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:text="total amount of products"
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/cart_layout_clear_all_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_clear"
                            android:contentDescription="TODO" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/clear_all_btn_text"
                            android:textColor="@color/green_cart_color"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/cart_layout_scrollview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/check_out_price_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_price_text"
                        android:textColor="@color/color_Accent"
                        android:textSize="17sp"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="6dp"
                        android:layout_gravity="center_horizontal"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:text="@string/check_out_btn_text"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:background="@drawable/add_to_cart_btn_wishlist_layout"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>






</FrameLayout>