<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lighter_white_solid">

    <RelativeLayout
        android:id="@+id/empty_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Cart_is_empty"
                android:textColor="@color/color_Accent"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/go_and_add_a_product_to_cart"
                android:textColor="@color/pantone_green"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="30dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:src="@drawable/empty_cart_layout_bg"
                android:padding="20dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>



    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/amount_of_products_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="gone">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:id="@+id/number_of_products_in_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="total amount of products"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/cart_layout_clear_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_clear" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/clear_all_btn_text"
                        android:textColor="@color/green_cart_color"
                        android:textSize="18sp" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/cart_layout_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
